--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
-
-<!-- <div id="imgSuperior"></div> -->
-  <div class="row" id="contenidoBtn">
-    <h1>Selecciona método de viaje</h1>
-    <div class="col-4"> <button type="button" class="btn btn-light" routerLink="autobus" >Autobus</button> </div>
-    <div class="col-4"> <button type="button" class="btn btn-light" routerLink="avion">Avión</button> </div>
-    <div class="col-4"> <button type="button" class="btn btn-light" routerLink="uber">Uber</button> </div>
-
-      
-    
-      
-    
-      
-  
-  <br>
-      <router-outlet></router-outlet>
+<h1>Selecciona método de viaje</h1>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <button type="button" class="btn btn-light" routerLink="autobus" >Autobus</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-light" routerLink="avion">Avión</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-light" routerLink="uber">Uber</button>
+    </div>
   </div>
+</div>
+
+  <br>
+    <router-outlet></router-outlet>
 
