--- a/src/app/autobus/autobus.component.html
+++ b/src/app/autobus/autobus.component.html
@@ -1,50 +1,86 @@
-<br><br>
-<!-- <div class="form-check">
-
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        Paquete 1
-                        <ul>
-                            <li>servicio uno</li>
-                            <li>servicio dos</li>
-                            <li>servicio tres</li>
-                        </ul>
-                        <label class="form-check-label" for="flexRadioDefault1">
-                            Seleccionar
-                        </label>
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                    </div>
-                  </div>
-                
-                
-            </div>
-            <div class="col">
-                Paquete 2
-                <ul>
-                    <li>servicio uno</li>
-                    <li>servicio dos</li>
-                    <li>servicio tres</li>
-                </ul>
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Seleccionar
-                </label>
-            </div>
-            <div class="col">
-                Paquete 3
-                <ul>
-                    <li>servicio uno</li>
-                    <li>servicio dos</li>
-                    <li>servicio tres</li>
-                </ul>
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    Seleccionar
-                </label>
-            </div>
+<div class="card" id="selects">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-6">
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+          <option selected>Selecciona origen</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+          <option selected>Selecciona destino</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+          <option selected>Selecciona hora</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+      </div>
+      <div class="col-6">
+        <div class="form-floating mb-3">
+          <input type="date" class="form-control" id="floatingInput" >
+          <label for="floatingInput">Selecciona fecha</label>
         </div>
+
+      </div>
     </div>
-</div> -->
+  </div>
+</div>
+
+
+<div class="card">
+  <div class="card-body">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <h4>Paquete 1</h4>
+            <ul>
+              <li>servicio uno</li>
+              <li>servicio dos</li>
+              <li>servicio tres</li>
+            </ul>
+            <div id="btnRadio">
+              <mat-radio-button value="1">Seleccionar</mat-radio-button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <h4>Paquete 1</h4>
+            <ul>
+              <li>servicio uno</li>
+              <li>servicio dos</li>
+              <li>servicio tres</li>
+            </ul>
+            <div id="btnRadio">
+              <mat-radio-button value="1">Seleccionar</mat-radio-button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <h4>Paquete 1</h4>
+            <ul>
+              <li>servicio uno</li>
+              <li>servicio dos</li>
+              <li>servicio tres</li>
+            </ul>
+            <div id="btnRadio">
+              <mat-radio-button value="1">Seleccionar</mat-radio-button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
