--- a/src/app/autobus/autobus.component.html
+++ b/src/app/autobus/autobus.component.html
@@ -2,24 +2,79 @@
   <div class="card-body">
     <div class="row">
       <div class="col-6">
-        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+
+    <!-- SELECCION DE ORIGEN  -->
+    <mat-form-field appearance="fill">
+      <mat-label>Selecciona Tu Origen</mat-label>
+      <mat-select [formControl]="origen"  [(ngModel)]="origen.nombre" placeholder="ORIGEN">
+        <mat-option *ngfor="let elemento of elemento"  value="elemento.origen">{{elemento.origen}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+        <!-- <select class="form-select form-select-sm" aria-label=".form-select-sm example">
           <option selected>Selecciona origen</option>
           <option value="1">One</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
-        </select>
-        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+        </select> -->
+
+        &nbsp;
+       &nbsp;
+
+       <mat-form-field appearance="fill">
+        <mat-label>Selecciona Tu Destino</mat-label>
+        <mat-select [formControl]="destino"  [(ngModel)]="transporte.destino" placeholder="DESTINO">
+          <mat-option *ngfor="let elemento of elemento"  value="elemento.destino">{{elemento.destino}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+        <!-- <select class="form-select form-select-sm" aria-label=".form-select-sm example">
           <option selected>Selecciona destino</option>
           <option value="1">One</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
-        </select>
-        <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+        </select> -->
+
+        &nbsp;
+       &nbsp;
+
+       <mat-form-field appearance="fill">
+        <mat-label>Selecciona Tu Horario</mat-label>
+        <mat-select [formControl]="horario"  [(ngModel)]="transporte.horario" placeholder="HORARIO 24 HRS">
+          <mat-option  value="1"> 8:00 am</mat-option>
+          <mat-option  value="1"> 8:40 am</mat-option>
+          <mat-option  value="1"> 9:20 am</mat-option>
+          <mat-option  value="1"> 10:00 am</mat-option>
+          <mat-option  value="1"> 10:40 am</mat-option>
+          <mat-option  value="1"> 11:20 am</mat-option>
+          <mat-option  value="1"> 12:00 pm </mat-option>
+          <mat-option  value="1"> 12:40 pm</mat-option>
+          <mat-option  value="1"> 1:20 pm</mat-option>
+          <mat-option  value="1"> 2:00 pm</mat-option>
+          <mat-option  value="1"> 2:40 pm</mat-option>
+          <mat-option  value="1"> 3:20 pm</mat-option>
+          <mat-option  value="1"> 4:00 pm </mat-option>
+          <mat-option  value="1"> 4:40 pm</mat-option>
+          <mat-option  value="1"> 5:20 pm</mat-option>
+          <mat-option  value="1"> 6:00 pm</mat-option>
+          <mat-option  value="1"> 6:40 pm</mat-option>
+          <mat-option  value="1"> 7:20 pm</mat-option>
+          <mat-option  value="1"> 8:00 pm</mat-option>
+          <mat-option  value="1"> 8:40 pm</mat-option>
+          <mat-option  value="1"> 9:20 pm</mat-option>
+          <mat-option  value="1"> 10:00 pm </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+        <!-- <select class="form-select form-select-sm" aria-label=".form-select-sm example">
           <option selected>Selecciona hora</option>
           <option value="1">One</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
-        </select>
+        </select> -->
+
+        &nbsp;
+        &nbsp;
+
       </div>
       <div class="col-6">
         <div class="form-floating mb-3">
