--- a/src/app/uber/uber.component.html
+++ b/src/app/uber/uber.component.html
@@ -1,1 +1,130 @@
-<p>uber works!</p>
+<div class="card" id="selects">
+    <div class="card-body">
+      <h3>Selecciona los datos de tu viaje en uber</h3>
+      <div class="row">
+        <div class="col-3">  
+          <mat-form-field appearance="outline">
+            <mat-label>Selecciona tu origen</mat-label>
+            <mat-select placeholder="HORARIO 24 HRS">
+              <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
+              <mat-option  value="2"> Hermosillo, Sonora</mat-option>
+              <mat-option  value="3"> Saltillo, Coahuila</mat-option>
+              <mat-option  value="4"> Querétaro, Querétaro</mat-option>
+              <mat-option  value="5"> CDMX</mat-option>
+              <mat-option  value="6"> Guadalajara, Jalisco</mat-option>
+              <mat-option  value="7"> Monterrey, Monterrey </mat-option>
+              <mat-option  value="8"> Acapulco, Guerrero</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-3">
+          <mat-form-field appearance="outline">
+            <mat-label>Selecciona tu destino</mat-label>
+            <mat-select placeholder="HORARIO 24 HRS">
+              <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
+              <mat-option  value="2"> Hermosillo, Sonora</mat-option>
+              <mat-option  value="3"> Saltillo, Coahuila</mat-option>
+              <mat-option  value="4"> Querétaro, Querétaro</mat-option>
+              <mat-option  value="5"> CDMX</mat-option>
+              <mat-option  value="6"> Guadalajara, Jalisco</mat-option>
+              <mat-option  value="7"> Monterrey, Monterrey </mat-option>
+              <mat-option  value="8"> Acapulco, Guerrero</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-3">
+          <mat-form-field appearance="outline">
+            <mat-label>Selecciona el horario</mat-label>
+            <mat-select placeholder="HORARIO 24 HRS">
+              <mat-option > 8:00 am</mat-option>
+              <mat-option > 8:30 am</mat-option>
+              <mat-option > 9:20 am</mat-option>
+              <mat-option > 10:00 am</mat-option>
+              <mat-option > 10:40 am</mat-option>
+              <mat-option > 11:20 am</mat-option>
+              <mat-option > 12:00 pm </mat-option>
+              <mat-option > 12:40 pm</mat-option>
+              <mat-option > 1:20 pm</mat-option>
+              <mat-option > 2:00 pm</mat-option>
+              <mat-option > 2:40 pm</mat-option>
+              <mat-option > 3:20 pm</mat-option>
+              <mat-option > 4:00 pm </mat-option>
+              <mat-option > 4:40 pm</mat-option>
+              <mat-option > 5:20 pm</mat-option>
+              <mat-option > 6:00 pm</mat-option>
+              <mat-option > 6:40 pm</mat-option>
+              <mat-option > 7:20 pm</mat-option>
+              <mat-option > 8:00 pm</mat-option>
+              <mat-option > 8:40 pm</mat-option>
+              <mat-option > 9:20 pm</mat-option>
+              <mat-option > 10:00 pm </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-3">
+          <div class="form-floating mb-3">
+            <input type="date" class="form-control" id="floatingInput" >
+            <label for="floatingInput">Selecciona fecha</label>
+        </div>
+  
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="card">
+    <div class="card-body">
+      <h3>Selecciona tu paquete</h3>
+      <div class="row">
+        <div class="col-sm">
+          <div class="card">
+            <div class="card-body">
+              <h4>Paquete VIP</h4>
+              <ul>
+                <li>Servicio de snacks</li>
+                <li>Internet</li>
+                <li>Auto deportivo</li>
+                <li>Música peronalizada</li>
+              </ul>
+              <div id="btnRadio">
+                <mat-radio-button value="1">Seleccionar</mat-radio-button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <div class="card-body">
+              <h4>Paquete Platino</h4>
+              <ul>
+                <li>Internet</li>
+                <li>Música peronalizada</li>
+                <li> </li>
+                <li> </li>
+              </ul>
+              <div id="btnRadio">
+                <mat-radio-button value="1">Seleccionar</mat-radio-button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <div class="card-body">
+              <h4>Paquete General</h4>
+              <ul>
+                <li>Música peronalizada</li>
+                <li> </li>
+                <li> </li>
+                <li> </li>
+              </ul>
+              <div id="btnRadio">
+                <mat-radio-button value="1">Seleccionar</mat-radio-button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
