--- a/src/app/autobus/autobus.component.html
+++ b/src/app/autobus/autobus.component.html
@@ -5,7 +5,7 @@
       <div class="col-3">  
         <mat-form-field appearance="outline">
           <mat-label>Selecciona tu origen</mat-label>
-          <mat-select placeholder="HORARIO 24 HRS">
+          <mat-select placeholder="Origen">
             <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
             <mat-option  value="2"> Hermosillo, Sonora</mat-option>
             <mat-option  value="3"> Saltillo, Coahuila</mat-option>
@@ -20,7 +20,7 @@
       <div class="col-3">
         <mat-form-field appearance="outline">
           <mat-label>Selecciona tu destino</mat-label>
-          <mat-select placeholder="HORARIO 24 HRS">
+          <mat-select placeholder="Destino">
             <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
             <mat-option  value="2"> Hermosillo, Sonora</mat-option>
             <mat-option  value="3"> Saltillo, Coahuila</mat-option>
@@ -35,29 +35,29 @@
       <div class="col-3">
         <mat-form-field appearance="outline">
           <mat-label>Selecciona el horario</mat-label>
-          <mat-select placeholder="HORARIO 24 HRS">
-            <mat-option > 8:00 am</mat-option>
-            <mat-option > 8:40 am</mat-option>
-            <mat-option > 9:20 am</mat-option>
-            <mat-option > 10:00 am</mat-option>
-            <mat-option > 10:40 am</mat-option>
-            <mat-option > 11:20 am</mat-option>
-            <mat-option > 12:00 pm </mat-option>
-            <mat-option > 12:40 pm</mat-option>
-            <mat-option > 1:20 pm</mat-option>
-            <mat-option > 2:00 pm</mat-option>
-            <mat-option > 2:40 pm</mat-option>
-            <mat-option > 3:20 pm</mat-option>
-            <mat-option > 4:00 pm </mat-option>
-            <mat-option > 4:40 pm</mat-option>
-            <mat-option > 5:20 pm</mat-option>
-            <mat-option > 6:00 pm</mat-option>
-            <mat-option > 6:40 pm</mat-option>
-            <mat-option > 7:20 pm</mat-option>
-            <mat-option > 8:00 pm</mat-option>
-            <mat-option > 8:40 pm</mat-option>
-            <mat-option > 9:20 pm</mat-option>
-            <mat-option > 10:00 pm </mat-option>
+          <mat-select placeholder="Horario">
+            <mat-option value="1"> 8:00 am</mat-option>
+            <mat-option value="1"> 8:40 am</mat-option>
+            <mat-option value="1"> 9:20 am</mat-option>
+            <mat-option value="1"> 10:00 am</mat-option>
+            <mat-option value="1"> 10:40 am</mat-option>
+            <mat-option value="1"> 11:20 am</mat-option>
+            <mat-option value="1"> 12:00 pm </mat-option>
+            <mat-option value="1"> 12:40 pm</mat-option>
+            <mat-option value="1"> 1:20 pm</mat-option>
+            <mat-option value="1"> 2:00 pm</mat-option>
+            <mat-option value="1"> 2:40 pm</mat-option>
+            <mat-option value="1"> 3:20 pm</mat-option>
+            <mat-option value="1"> 4:00 pm </mat-option>
+            <mat-option value="1"> 4:40 pm</mat-option>
+            <mat-option value="1"> 5:20 pm</mat-option>
+            <mat-option value="1"> 6:00 pm</mat-option>
+            <mat-option value="1"> 6:40 pm</mat-option>
+            <mat-option value="1"> 7:20 pm</mat-option>
+            <mat-option value="1"> 8:00 pm</mat-option>
+            <mat-option value="1"> 8:40 pm</mat-option>
+            <mat-option value="1"> 9:20 pm</mat-option>
+            <mat-option value="1"> 10:00 pm </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
@@ -104,7 +104,7 @@
               <li> </li>
             </ul>
             <div id="btnRadio">
-              <mat-radio-button value="1">Seleccionar</mat-radio-button>
+              <mat-radio-button value="2">Seleccionar</mat-radio-button>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
               <li> </li>
             </ul>
             <div id="btnRadio">
-              <mat-radio-button value="1">Seleccionar</mat-radio-button>
+              <mat-radio-button value="3">Seleccionar</mat-radio-button>
             </div>
           </div>
         </div>
