--- a/src/app/avion/avion.component.html
+++ b/src/app/avion/avion.component.html
@@ -5,7 +5,7 @@
         <div class="col-3">  
           <mat-form-field appearance="outline">
             <mat-label>Selecciona tu origen</mat-label>
-            <mat-select placeholder="HORARIO 24 HRS">
+            <mat-select placeholder="Origen">
               <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
               <mat-option  value="2"> Hermosillo, Sonora</mat-option>
               <mat-option  value="3"> Saltillo, Coahuila</mat-option>
@@ -20,7 +20,7 @@
         <div class="col-3">
           <mat-form-field appearance="outline">
             <mat-label>Selecciona tu destino</mat-label>
-            <mat-select placeholder="HORARIO 24 HRS">
+            <mat-select placeholder="Origen">
               <mat-option  value="1"> Cd.Juárez, Chihuahua</mat-option>
               <mat-option  value="2"> Hermosillo, Sonora</mat-option>
               <mat-option  value="3"> Saltillo, Coahuila</mat-option>
@@ -35,15 +35,15 @@
         <div class="col-3">
           <mat-form-field appearance="outline">
             <mat-label>Selecciona el horario</mat-label>
-            <mat-select placeholder="HORARIO 24 HRS">
-              <mat-option > 8:00 am</mat-option>
-              <mat-option > 10:00 am</mat-option>
-              <mat-option > 12:00 pm</mat-option>
-              <mat-option > 2:00 pm</mat-option>
-              <mat-option > 4:00 pm</mat-option>
-              <mat-option > 6:00 pm</mat-option>
-              <mat-option > 8:00 pm </mat-option>
-              <mat-option > 10:00 pm</mat-option>
+            <mat-select placeholder="Horario">
+              <mat-option value="1"> 8:00 am</mat-option>
+              <mat-option value="1"> 10:00 am</mat-option>
+              <mat-option value="1"> 12:00 pm</mat-option>
+              <mat-option value="1"> 2:00 pm</mat-option>
+              <mat-option value="1"> 4:00 pm</mat-option>
+              <mat-option value="1"> 6:00 pm</mat-option>
+              <mat-option value="1"> 8:00 pm </mat-option>
+              <mat-option value="1"> 10:00 pm</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -74,7 +74,7 @@
                 <li>Servicio de masaje</li>
               </ul>
               <div id="btnRadio">
-                <mat-radio-button value="1">Seleccionar</mat-radio-button>
+                <mat-radio-button value="4">Seleccionar</mat-radio-button>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
                 <li> </li>
               </ul>
               <div id="btnRadio">
-                <mat-radio-button value="2">Seleccionar</mat-radio-button>
+                <mat-radio-button value="5">Seleccionar</mat-radio-button>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
                 <li> </li>
               </ul>
               <div id="btnRadio">
-                <mat-radio-button value="3">Seleccionar</mat-radio-button>
+                <mat-radio-button value="6">Seleccionar</mat-radio-button>
               </div>
             </div>
           </div>
